@@ -15,6 +15,7 @@ travis_status = 1
 release_tests = 1
 installer     = Author::Plicease::MakeMaker
 irc           = irc://irc.perl.org/#native
+test2_v0      = 1
 
 [AlienBuild]
 
@@ -22,6 +23,7 @@ irc           = irc://irc.perl.org/#native
 remove = strict
 remove = warnings
 remove = base
+remove = Env
 remove = Alien::MSYS
 remove = File::Temp
 
