@@ -1,7 +1,7 @@
-use strict;
-use warnings;
+use Test2::V0 -no_srand => 1;
 use Config;
-use Test::More tests => 1;
+
+eval q{ require Test::More };
 
 # This .t file is generated.
 # make changes instead to dist.ini
@@ -15,13 +15,14 @@ $modules{$_} = $_ for qw(
   Alien::Build::MM
   Alien::Build::Plugin::Build::Autoconf
   Alien::Build::Plugin::Build::MSYS
-  Env
+  Capture::Tiny
   ExtUtils::MakeMaker
+  File::Which
   File::chdir
   Path::Tiny
+  Sort::Versions
   Test2::V0
   Test::Alien
-  Test::More
 );
 
 
@@ -68,7 +69,7 @@ if(@keys > 0)
 
 diag sprintf $format, 'perl ', $];
 
-foreach my $module (@modules)
+foreach my $module (sort @modules)
 {
   if(eval qq{ require $module; 1 })
   {
@@ -90,3 +91,4 @@ if($post_diag)
 
 spacer;
 
+done_testing;
